// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkingPaperCitation renders  component with a mock espace record 1`] = `
<div>
  <div
    class="citationContent citationWorkingPaper"
  >
    <span
      class="citationAuthors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        Laselle, Laurence
      </span>
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        Tisdell, Clem
      </span>
       
    </span>
    <span
      class="citationDate"
    >
      (
      2006
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Education, Employment and Social Inclusion within the European Union
      .
    </span>
    <span
      class="citationSource"
    >
       
      Working papers on Social Economics, Policy and Development
      .
    </span>
    <span
      class="citationReportNumber"
    >
       
      46
      .
    </span>
    <span
      class="citationOrgUnit"
    >
       
      School of Economics
      , 
    </span>
    <span
      class="citationOrgName"
    >
       
      The University of Queensland
      .
    </span>
    <span
      data-testid="rek-doi"
    >
      <a
        aria-label="Open this DOI in an new window"
        class="citationDoiLink css-1oqhn84"
        data-analyticsid="citation-doi-link"
        data-testid="citation-doi-link"
        href="https://doi.org/10.1242/jcs.196651"
        id="citation-doi-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Open this DOI in an new window"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7r41zx-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          id="citation-doi-link-new-window-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
        https://doi.org/10.1242/jcs.196651
      </a>
    </span>
  </div>
</div>
`;

exports[`WorkingPaperCitation renders  component with an empty doi view 1`] = `
<div>
  <div
    class="citationContent citationWorkingPaper"
  >
    <span
      class="citationAuthors"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        Laselle, Laurence
      </span>
       and 
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        Tisdell, Clem
      </span>
       
    </span>
    <span
      class="citationDate"
    >
      (
      2006
      ).
    </span>
    <span
      class="citationTitle"
    >
       
      Education, Employment and Social Inclusion within the European Union
      .
    </span>
    <span
      class="citationSource"
    >
       
      Working papers on Social Economics, Policy and Development
      .
    </span>
    <span
      class="citationReportNumber"
    >
       
      46
      .
    </span>
    <span
      class="citationOrgUnit"
    >
       
      School of Economics
      , 
    </span>
    <span
      class="citationOrgName"
    >
       
      The University of Queensland
      .
    </span>
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;

exports[`WorkingPaperCitation renders  component with empty publication 1`] = `
<div>
  <div
    class="citationContent citationWorkingPaper"
  >
    <span
      class="citationAuthors empty"
    />
    <span
      class="citationDate empty"
    />
    <span
      class="citationTitle empty"
    />
    <span
      class="citationSource empty"
    />
    <span
      class="citationReportNumber empty"
    />
    <span
      class="citationOrgUnit empty"
    />
    <span
      class="citationOrgName empty"
    />
    <span
      class="citationDOI empty"
    />
  </div>
</div>
`;
